# mcp-sample

./: .gitignore  README.md  pyproject.toml
examples/: MINIMAL_REQUIREMENTS.md  README_WIN_AUTH.md  advanced_server.py  bare_minimum.py  claude_desktop_config.json  minimal_server.py  server_with_transports.py  win_auth_http.py  win_auth_http_config_template.json
src/: __init__.py  echo_server.py
