[project]
name = "mcp-echo-server"
version = "0.1.0"
description = "A simple MCP server that echoes input"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0"
]

[project.scripts]
mcp-echo-server = "src.echo_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"