[project]
name = "mcp-echo-server"
version = "0.1.0"
description = "A simple MCP server that echoes input"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0"
]

[project.optional-dependencies]
windows-auth = [
    "requests",
    "requests-ntlm",
    "requests-kerberos",
    "pyspnego"
]

[project.scripts]
mcp-echo-server = "src.echo_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]